ajout fichiçer 8bit

--- a/indextest.html
+++ b/indextest.html
@@ -253,18 +253,18 @@
         position: absolute;
         top: 0%;
         right:0%;
-        width: 410px;
-        height: 100%;
-        background-image: url('img/pousser1.svg');
+        width: 125px;
+        height: 230px;
+        background-image: url('img/spritepousser.png');
         background-size: cover;
         background-position: 0px 0px;
-        /*-webkit-animation: accueil 1s steps(2, start) infinite ;*/
+        -webkit-animation: accueil 1s steps(4, start) infinite ;
         z-index: 8000;
       }
 
       @-webkit-keyframes accueil {
         to{
-          background-position: 400px 0px;
+          background-position: 500px 0px;
         }
 
       }
