sauvegarde avant que mon DD recrache

--- a/indextest.html
+++ b/indextest.html
@@ -5,168 +5,7 @@
     <title>Index TEST</title>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,500italic,300,100' rel='stylesheet' type='text/css'>
-    <script type="application/javascript">
-    var canvas = document.getElementById("head").getContext("2d");
 
-    function draw() {
-     var canvas = document.getElementById("head");
-     if (canvas.getContext) {
-       var firsctx = canvas.getContext("2d");
-
-    //  HEAD
-       firsctx.clearRect(100,100,20,20);
-
-       firsctx.fillStyle = "rgb(87,57,10)";
-       firsctx.fillRect (120, 100, 80, 20);
-
-       firsctx.clearRect(200,100,20,20);
-
-       firsctx.fillStyle = "rgb(87,57,10)";
-       firsctx.fillRect (100, 120, 120, 20);
-
-       firsctx.fillStyle = "rgb(87,57,10)";
-       firsctx.fillRect (100, 140, 40, 20);
-
-       firsctx.fillStyle = "rgb(87,57,10)";
-       firsctx.fillRect (200, 140, 20, 20);
-
-       firsctx.fillStyle = "rgb(87,57,10)";
-       firsctx.fillRect (100, 160, 20, 40);
-
-       firsctx.fillStyle = "rgb(233,223,207)";
-       firsctx.fillRect (120, 160, 20, 100);
-
-       firsctx.fillStyle = "rgb(233,223,207)";
-       firsctx.fillRect (140, 140, 20, 120);
-
-       firsctx.fillStyle = "rgb(233,223,207)";
-       firsctx.fillRect (160, 140, 20, 120);
-
-       firsctx.fillStyle = "rgb(233,223,207)";
-       firsctx.fillRect (180, 140, 20, 120);
-
-        //BARBEUHH
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (120, 200, 10, 10);
-
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (120, 210, 10, 10);
-
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (120, 220, 10, 10);
-
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (120, 230, 10, 10);
-
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (120, 240, 10, 10);
-
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (120, 245, 80, 10);
-
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (125, 250, 75, 10);
-
-        firsctx.fillStyle = "rgb(87,57,10)";
-        firsctx.fillRect (190, 220, 10, 25);
-
-       //FIN BARBEUHH
-
-      //  LUNETTES
-      firsctx.fillStyle = "rgb(26,17,3)";
-      firsctx.fillRect (120, 165, 85, 5);
-
-      firsctx.fillStyle = "rgb(26,17,3)";
-      firsctx.fillRect (181, 165, 5, 20);
-
-      firsctx.fillStyle = "rgb(26,17,3)";
-      firsctx.fillRect (181, 185, 29, 5);
-
-      firsctx.fillStyle = "rgb(26,17,3)";
-      firsctx.fillRect (145, 165, 5, 20);
-
-      firsctx.fillStyle = "rgb(26,17,3)";
-      firsctx.fillRect (175, 165, 5, 20);
-
-      firsctx.fillStyle = "rgb(26,17,3)";
-      firsctx.fillRect (145, 185, 35, 5);
-
-
-
-      firsctx.fillStyle = "rgb(26,17,3)";
-      firsctx.fillRect (205, 165, 5, 20);
-      //FIN LUNETTES
-
-
-       firsctx.fillStyle = "rgb(222,207,183)";
-       firsctx.fillRect (120, 260, 20, 40);
-
-       firsctx.fillStyle = "rgb(222,207,183)";
-       firsctx.fillRect (140, 260, 20, 40);
-        //FIN  HEAD
-
-        // COL + HABITS
-        firsctx.fillStyle = "rgb(54,100,139)";
-        firsctx.fillRect (90, 280, 100, 10);
-
-        firsctx.fillStyle = "rgb(54,100,139)";
-        firsctx.fillRect (70, 290, 140, 20);
-
-        firsctx.fillStyle = "rgb(54,100,139)";
-        firsctx.fillRect (70, 310, 20, 20);
-
-        firsctx.fillStyle = "rgb(54,100,139)";
-        firsctx.fillRect (190, 310, 20, 20);
-
-        firsctx.fillStyle = "rgb(54,100,139)";
-        firsctx.fillRect (90, 310, 100, 140);
-        //FIN COL + HABITS
-
-        // PANTALON
-        firsctx.fillStyle = "rgb(23,21,21)";
-        firsctx.fillRect (90, 450, 20, 200);
-
-        firsctx.fillStyle = "rgb(23,21,21)";
-        firsctx.fillRect (110, 470, 60, 10);
-
-        firsctx.fillStyle = "rgb(23,21,21)";
-        firsctx.fillRect (100, 450, 20, 200);
-
-        firsctx.fillStyle = "rgb(23,21,21)";
-        firsctx.fillRect (100, 450, 60, 20);
-
-        firsctx.fillStyle = "rgb(23,21,21)";
-        firsctx.fillRect (170, 450, 20, 200);
-
-        firsctx.fillStyle = "rgb(23,21,21)";
-        firsctx.fillRect (160, 450, 20, 200);
-        //FIN PANTALON
-
-        // CHAUSSURES + ombre (178,178,178)
-        firsctx.fillStyle = "rgb(170,161,119)";
-        firsctx.fillRect (90, 650, 30, 20);
-
-        firsctx.fillStyle = "rgb(170,161,119)";
-        firsctx.fillRect (160, 650, 30, 20);
-
-        firsctx.fillStyle = "rgb(170,161,119)";
-        firsctx.fillRect (160, 650, 30, 20);
-        //FIN CHAUSSURES + ombre
-
-        // BRAS
-        firsctx.fillStyle = "rgb(233,223,207)";
-        firsctx.fillRect (70, 330, 20, 150);
-
-        firsctx.fillStyle = "rgb(233,223,207)";
-        firsctx.fillRect (190, 330, 20, 150);
-        //FIN BRAS
-
-     }
-   }
-
-
-
-    </script>
     <style media="screen">
 
 
@@ -185,23 +24,12 @@
       }
     }
 
-      canvas{
-        position: fixed;
-        bottom: -5%;
-        left: 15%;
-        z-index: 1000;
-      }
-
-
       div.first-fixe{
         position: relative;
         top: 0;
         width: 100%;
         height: 100vh;
-        background-image: url('img/ciel42.svg');
-        background-repeat: no-repeat;
-        background-position: top right 40%;
-        z-index: 1000;
+
       }
 
       div.left-fixe{
@@ -251,20 +79,21 @@
 
       div#paul8bit{
         position: absolute;
-        top: 0%;
+        bottom: 0%;
         right:0%;
-        width: 125px;
-        height: 230px;
-        background-image: url('img/spritepousser.png');
+        width: 115px;
+        height: 220px;
+        background-image: url('img/testg.png');
         background-size: cover;
         background-position: 0px 0px;
         -webkit-animation: accueil 1s steps(4, start) infinite ;
-        z-index: 8000;
+        z-index: 5000;
+        border: 1px solid red;
       }
 
       @-webkit-keyframes accueil {
         to{
-          background-position: 500px 0px;
+          background-position: 460px 0px;
         }
 
       }
@@ -289,6 +118,8 @@
         text-align: center;
         font: 900 10em 'Roboto', sans-serif;
         color: #89C6D2;
+        animation: pudge 3s linear infinite alternate;
+
       }
 
       h2#nom{
@@ -355,12 +186,44 @@
           line-height: 1.5em;
       }
 
+      div#move-first{
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+      }
+
+      div#move-bg{
+        position: absolute;
+        top: 0;
+        right: 10px;
+        width: 60%;
+        height: 100%;
+        z-index: 1000;
+        background-image: url('img/ciel42.svg');
+        background-repeat: no-repeat;
+        background-position: 0px 0px;
+        -webkit-animation: loopee 4s linear 1 forwards;
+      }
+
+      div#move-paul{
+        position: absolute;
+        top: 0;
+        right: 0px;
+        width: 60%;
+        height: 100%;
+        -webkit-animation: loopee 4s linear 1 forwards;
+        border: 1px solid yellow;
+
+      }
+
       div#move{
         position: absolute;
         top: 20px;
         left: 125px;
         z-index: 6000;
         -webkit-animation: loope 4s infinite none;
+        border: 1px solid purple;
       }
 
       .stage {
@@ -393,10 +256,13 @@
       }
     }
 
-    @-webkit-keyframes pluie {
+    @-webkit-keyframes loopee {
+      from{
+        right: -50%;
+      }
+
       to {
-        background-position: 200px 0px;
-        top:10px;
+        right: 2%;
       }
     }
 
@@ -404,10 +270,24 @@
     </style>
   </head>
 <body onload="draw();">
+
+<!-- FIRST SECTION -->
+
   <div class="first-fixe">
-    <div id="paul8bit"></div>
+
+    <div id="move-first">
+      <div id="move-bg"></div>
+        <div id="move-paul">
+          <div id="paul8bit"></div>
+        </div>
+    </div>
 
   </div>
+
+  <!-- FIN FIRST SECTION -->
+
+
+
 
   <div class="left-fixe">
     <h1 id="logo">P.</h1>
@@ -438,7 +318,7 @@
         <p></p>
 
     </div>
-    <div id="eau">aze</div>
+
   </div>
   </body>
 </html>
